test/files/neg/t2458c/p.scala

package p {
  object `package` {
    def f() = 42
    def f(i: Int) = i + 1
    def g() = 17
  }
}
